; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/falcon/extr_base.c_nvkm_falcon_set_start_addr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/falcon/extr_base.c_nvkm_falcon_set_start_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_falcon = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.nvkm_falcon*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvkm_falcon_set_start_addr(%struct.nvkm_falcon* %0, i32 %1) #0 {
  %3 = alloca %struct.nvkm_falcon*, align 8
  %4 = alloca i32, align 4
  store %struct.nvkm_falcon* %0, %struct.nvkm_falcon** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nvkm_falcon*, %struct.nvkm_falcon** %3, align 8
  %6 = getelementptr inbounds %struct.nvkm_falcon, %struct.nvkm_falcon* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (%struct.nvkm_falcon*, i32)*, i32 (%struct.nvkm_falcon*, i32)** %8, align 8
  %10 = load %struct.nvkm_falcon*, %struct.nvkm_falcon** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 %9(%struct.nvkm_falcon* %10, i32 %11)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
